--- a/ACS110141_ex1/ex1.ipynb
+++ b/ACS110141_ex1/ex1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 1,
       "metadata": {
         "id": "9Bp_ELVmVeeu"
       },
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qbv1dxUzWYE5",
-        "outputId": "a8954303-aaa2-4291-9004-6784d0f5ca5b"
+        "outputId": "202a1416-e722-48f0-f378-681aa1d926a0"
       },
       "outputs": [
         {
@@ -78,13 +78,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkoKnOuTaJUi",
-        "outputId": "13eca25b-a8ab-4538-a9ff-cba64c3bd387"
+        "outputId": "2272d4eb-bdca-44fb-ba79-d3f53139ef69"
       },
       "outputs": [
         {
@@ -94,19 +94,19 @@
             "\n",
             "XGBoost Evaluation:\n",
             "=============================================\n",
-            "         Accuracy: 0.9995786664794073\n",
-            "  Precision Score: 0.9590163934426229\n",
-            "     Recall Score: 0.7905405405405406\n",
-            "         F1 Score: 0.8666666666666667\n",
+            "         Accuracy: 0.9996605924417448\n",
+            "  Precision Score: 0.9421487603305785\n",
+            "     Recall Score: 0.8382352941176471\n",
+            "         F1 Score: 0.8871595330739299\n",
             "\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       1.00      1.00      1.00     85295\n",
-            "           1       0.96      0.79      0.87       148\n",
+            "           0       1.00      1.00      1.00     85307\n",
+            "           1       0.94      0.84      0.89       136\n",
             "\n",
             "    accuracy                           1.00     85443\n",
-            "   macro avg       0.98      0.90      0.93     85443\n",
+            "   macro avg       0.97      0.92      0.94     85443\n",
             "weighted avg       1.00      1.00      1.00     85443\n",
             "\n"
           ]
@@ -117,8 +117,8 @@
         "X = np.asarray(data.iloc[:, ~data.columns.isin(['Class'])])\n",
         "Y = np.asarray(data.iloc[:, data.columns == 'Class'])\n",
         "\n",
-        "# 分成訓練與測試資料，stratify(分層)是為了分割後，保持挑選的資料中有不同的class\n",
-        "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=Y)\n",
+        "# 分成訓練與測試資料\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED)\n",
         "\n",
         "# 監督式模型XGBoost\n",
         "xgb_model = xgb.XGBClassifier(\n",
@@ -140,13 +140,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "02W_U-Grb_0B",
-        "outputId": "6b498230-11de-4129-dd3e-9ce65567e655"
+        "outputId": "d5495c95-bd97-4fb5-9f01-45f96e0a26f9"
       },
       "outputs": [
         {
@@ -216,7 +216,7 @@
       "cell_execution_strategy": "setup",
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyNMCldVm4JYOIKPNjxsDefF"
+      "authorship_tag": "ABX9TyO+bO98XiP2GvVVUo0Ksghf"
     },
     "kernelspec": {
       "display_name": "Python 3",
