--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "id": "J_hwWrqvR0B1"
       },
@@ -154,7 +154,7 @@
         "    scores.append(score)\n",
         "\n",
         "optimal_k = np.argmax(scores) + 2\n",
-        "print(f\"Best k chosen based on silhouette score: {optimal_k}\")\n",
+        "print(f\"最佳 k 值: {optimal_k}\")\n",
         "print(f\"Silhouette scores for k=2~4: {scores}\")"
       ],
       "metadata": {
@@ -162,16 +162,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae380b3f-39e0-4a40-dd36-dbd34cb3645e"
+        "outputId": "a7b19b3d-13f4-4c2e-8de9-cb1ec8150c39"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best k chosen based on silhouette score: 2\n",
-            "Silhouette scores for k=2~4: [np.float64(0.050272842821298735), np.float64(0.03834701365572031), np.float64(0.03936384484324094)]\n"
+            "最佳 k 值: 2\n",
+            "Silhouette scores for k=2~4: [np.float64(0.0479740218352304), np.float64(0.03813469708758479), np.float64(0.037575170577199654)]\n"
           ]
         }
       ]
@@ -219,9 +219,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LvOFNKg03ER6",
-        "outputId": "2b44331b-de27-4985-ef35-3fbac008d0b8"
+        "outputId": "e07da29e-bb8d-45f6-d189-9befaa9c9660"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSypgCToekhcBTHIi8OEfc",
+      "authorship_tag": "ABX9TyOrbsEJnSVlLeoUBh38NA4Z",
       "include_colab_link": true
     },
     "kernelspec": {
