--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "Z9p241Ag6_W4"
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "S9OzKek-7Ly4"
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -186,15 +186,19 @@
     "\n",
     "### 結果\n",
     "\n",
-    "- Accuracy: 0.999637 -> **0.999672**\n",
-    "- Precision Score: 0.941176 -> **0.95**\n",
-    "- Recall Score: 0.823529 -> **0.838235**\n",
-    "- F1 Score: 0.878431 -> **0.890625**"
+    "四項指標皆有提升：\n",
+    "\n",
+    "|      指標       | Baseline |   My Model   |\n",
+    "|:---------------:|:--------:|:------------:|\n",
+    "|    Accuracy     | 0.999637 | **0.999672** |\n",
+    "| Precision Score | 0.941176 | **0.950000** |\n",
+    "|  Recall Score   | 0.823529 | **0.838235** |\n",
+    "|    F1 Score     | 0.878431 | **0.890625** |"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "NwgT6nZQ7le0"
    },
@@ -203,7 +207,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.12/dist-packages/xgboost/core.py:158: UserWarning: [16:46:20] WARNING: /home/coder/xgboost/src/common/error_msg.cc:58: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
+      "/usr/local/lib/python3.12/dist-packages/xgboost/core.py:158: UserWarning: [14:28:18] WARNING: /home/coder/xgboost/src/common/error_msg.cc:58: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
       "Potential solutions:\n",
       "- Use a data structure that matches the device ordinal in the booster.\n",
       "- Set the device for booster before call to inplace_predict.\n",
@@ -220,19 +224,19 @@
       "\n",
       "XGBoost Evaluation:\n",
       "=============================================\n",
-      "         Accuracy: 0.9996605924417448\n",
-      "  Precision Score: 0.9495798319327731\n",
-      "     Recall Score: 0.8308823529411765\n",
-      "         F1 Score: 0.8862745098039215\n",
+      "         Accuracy: 0.9996722961506501\n",
+      "  Precision Score: 0.95\n",
+      "     Recall Score: 0.8382352941176471\n",
+      "         F1 Score: 0.890625\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     85307\n",
-      "           1       0.95      0.83      0.89       136\n",
+      "           1       0.95      0.84      0.89       136\n",
       "\n",
       "    accuracy                           1.00     85443\n",
-      "   macro avg       0.97      0.92      0.94     85443\n",
+      "   macro avg       0.97      0.92      0.95     85443\n",
       "weighted avg       1.00      1.00      1.00     85443\n",
       "\n"
      ]
@@ -294,19 +298,23 @@
     "\n",
     "### 調整方法\n",
     "\n",
-    "嘗試使用 PCA 進行降維，去除較不重要的資料，提升判斷的準確性。在嘗試多種參數後，設置 `n_components=0.95` 的提升最大，保留了 27 維的資料。\n",
+    "雖然資料集本身已經過 PCA 處理，但或許還能再去除較不重要的資料，提升判斷的準確性。在嘗試多種參數後，設置 `n_components=0.95` 的提升最大，保留了 27 維的資料。\n",
     "\n",
     "### 結果\n",
     "\n",
-    "- Accuracy: 0.998724 -> **0.998748**\n",
-    "- Precision Score: 0.782609 -> **0.788732**\n",
-    "- Recall Score: 0.364865 -> **0.378378**\n",
-    "- F1 Score: 0.497696 -> **0.511416**"
+    "四項指標皆有提升：\n",
+    "\n",
+    "|      指標       | Baseline |   My Model   |\n",
+    "|:---------------:|:--------:|:------------:|\n",
+    "|    Accuracy     | 0.998724 | **0.998748** |\n",
+    "| Precision Score | 0.782609 | **0.788732** |\n",
+    "|  Recall Score   | 0.364865 | **0.378378** |\n",
+    "|    F1 Score     | 0.497696 | **0.511416** |"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "id": "NhOX-eo98M0R"
    },
@@ -315,24 +323,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "保留維度數量: 27\n",
       "\n",
-      "KMeans (Unsupervised) Evaluation:\n",
+      "Isolation Forest (Unsupervised) Evaluation:\n",
       "=============================================\n",
-      "         Accuracy: 0.9987477031471274\n",
-      "  Precision Score: 0.7887323943661971\n",
-      "     Recall Score: 0.3783783783783784\n",
-      "         F1 Score: 0.5114155251141552\n",
+      "         Accuracy: 0.9949205903350772\n",
+      "  Precision Score: 0.15789473684210525\n",
+      "     Recall Score: 0.44594594594594594\n",
+      "         F1 Score: 0.2332155477031802\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     85295\n",
-      "           1       0.79      0.38      0.51       148\n",
+      "           1       0.16      0.45      0.23       148\n",
       "\n",
-      "    accuracy                           1.00     85443\n",
-      "   macro avg       0.89      0.69      0.76     85443\n",
-      "weighted avg       1.00      1.00      1.00     85443\n",
+      "    accuracy                           0.99     85443\n",
+      "   macro avg       0.58      0.72      0.62     85443\n",
+      "weighted avg       1.00      0.99      1.00     85443\n",
       "\n"
      ]
     }
