--- a/acs111113_ex2.md
+++ b/acs111113_ex2.md
@@ -47,6 +47,14 @@
 
 ## 最終成果
 
+```plaintext
+k=2, Silhouette Score=0.7569
+k=3, Silhouette Score=0.6219
+k=4, Silhouette Score=0.0551
+k=5, Silhouette Score=0.0477
+k=6, Silhouette Score=0.0522
+k=7, Silhouette Score=0.0475
+Optimal k: 2
 Hybrid Model Evaluation Evaluation:
 =============================================
          Accuracy: 0.9995201479348805
@@ -63,5 +71,6 @@ Classification Report:
     accuracy                           1.00     85443
    macro avg       0.98      0.88      0.92     85443
 weighted avg       1.00      1.00      1.00     85443
+```
 
 在accuracy接近範例的情況下precision score超越範例。
