Fix: Added prediction visualization for Task 4

--- a/ACS111704_CNN_Assignment/ACS111704_CNN_Assignment.ipynb
+++ b/ACS111704_CNN_Assignment/ACS111704_CNN_Assignment.ipynb
@@ -87,6 +87,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52ffad7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 4: Predict on test images and visualize\n",
+    "predictions = model.predict(test_images[:5])\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "for i in range(5):\n",
+    "    plt.imshow(test_images[i])\n",
+    "    plt.title(f\"Prediction: {np.argmax(predictions[i])}\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1196c792",
    "metadata": {},
    "outputs": [],
